# pygraz-covid-cert

./: .gitignore  LICENSE.md  README.md  main.py  package.json  pyproject.toml  slides.odp
