[tool.poetry]
name = "pygraz-covid-cert"
version = "0.1.0"
description = ""
authors = ["Christoph Reiter <reiter.christoph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pdf2image = "^1.16.0"
pyzbar = "^0.1.8"
base45 = "^0.4.3"
cose = "^0.9.dev8"
httpx = "^0.19.0"
cbor2 = "^5.4.1"
cryptography = "^3.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
